--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,7 @@
+:root {
+  --primary-color: #3366ff;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +14,28 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a {
+  text-decoration: none;
+}
+
+h2 {
+  margin: 0;
+}
+
+.main {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.container {
+  width: 80%;
+  margin-top: 5vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
